conformance/1.0.0-beta/expected/errors/trailing-after-reference.cdx
<ExpectedError category=~syntax reason=~gloss-syn-trailing-after-reference/>
